# siphon_cro

./: .gitattributes  README.md  eslint.config.mjs  handler.txt  package-lock.json  package.json  tsconfig.json
circuits/: .gitignore  commitment.circom  input.json  main.circom  main.r1cs  main.sym  merkle_tree.circom  proof.json  public.json  withdrawal.circom  witness.wtns
circuits/testing_support_files/: compute_merkle_root.js  compute_root.js  compute_values.js
contract/: .env  hardhat.config.cjs  package-lock.json  package.json  remappings.txt  tsconfig.hardhat.json  tsconfig.json
contract/cache/: solidity-files-cache.json
contract/scripts/: deployEntrypoint.ts  deployVerifier.ts  deposit.ts  testWithdrawalWorkflow.ts
contract/src/: Entrypoint.sol
contract/test/: MerkleTreeFixed.test.ts  Withdrawal.test.ts  generate_test_data.js
public/zk/: main.wasm
src/app/: globals.css  hero.module.css  landing.module.css  layout.tsx  page.tsx
src/components/: Nexus.tsx
src/lib/: generateProof.js  handler.ts  nexus.ts  strategy.ts  swap.ts  x402Handler.ts  (+1 more)
strategies-executor/: .gitignore  README.md  docker-compose.yml
strategies-executor/fhe/: Cargo.toml  Dockerfile  README.md
strategies-executor/fhe/src/: auth.rs  main.rs  mpc_client.rs
strategies-executor/fhe/src/handlers/: evaluation_handler.rs
strategies-executor/siphon-payload-generator-demo/: Cargo.toml  Dockerfile  README.md  env.template
strategies-executor/siphon-payload-generator-demo/src/: fhe_core.rs  key_sharing.rs  main.rs  mpc_client.rs
swap/: deploy-router.js  swap-with-custom-router.js
x402Gate/: INTEGRATION.md  README.md  package-lock.json  package.json
(+116 files in other folders)
