[package]
name = "syphon_fhe_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tfhe = { version = "0.5", features = [
    "boolean",
    "shortint",
    "integer",
    "seeder_unix",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
hex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"