[package]
name = "syphon-payload-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework (Keep Axum, remove Actix)
axum = "0.6" 
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4", features = ["cors"] } # Version 0.4 matches Axum 0.6

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

# HTTP Client (to talk to Python)
reqwest = { version = "0.11", features = ["json"] }

# Encryption
tfhe = { version = "0.5", features = ["integer", "seeder_unix"] }

# Crypto utilities
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"

# For key sharing (we'll implement simple XOR-based sharing)
# In production, use a proper secret sharing library

# Environment variable loading (commented out due to network issues - using manual .env parsing)
# dotenv = "0.15"